Fix padding and alignment inconsistencies in CSS; update background image URL format

--- a/Making a website responsive/26.Fotomatic-solution/resources/css/style.css
+++ b/Making a website responsive/26.Fotomatic-solution/resources/css/style.css
@@ -71,7 +71,7 @@ nav a {
 }
 
 nav .button {
-  padding: .1875rem .5rem;
+  padding: 0.1875rem 0.5rem;
   background-color: #9dc20b;
   line-height: 1.6;
   color: white;
@@ -83,7 +83,7 @@ nav li:last-child {
 
 header .icon {
   width: 1rem;
-  padding-left: .75rem;
+  padding-left: 0.75rem;
 }
 
 header .mobile {
@@ -111,7 +111,7 @@ header .mobile {
   }
 
   header .content {
-    padding: .5rem 0;
+    padding: 0.5rem 0;
   }
 
   header .mobile ul {
@@ -130,19 +130,23 @@ header .mobile {
 
 #sign-up-section {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  /* justify-content: flex-start;
   align-items: flex-start;
+   */
   height: 43.5rem;
-  background-image: url('../images/banner-landingpage.jpg');
+  background-image: url("../images/banner-landingpage.jpg");
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #sign-up-cta {
-  position: relative;
+  /* position: relative;
   top: 171px;
-  left: 10%;
+  left: 10%; */
+  height: 50%;
   padding: 0 5rem 2.5rem 5rem;
   border: solid 1px #979797;
   border-radius: 4px;
@@ -176,7 +180,7 @@ header .mobile {
 
 #sign-up-cta .striking {
   font-family: "Rubik", sans-serif;
-  padding-bottom: .75rem;
+  padding-bottom: 0.75rem;
 }
 
 #sign-up-cta .button {
@@ -257,7 +261,7 @@ header .mobile {
 }
 
 .feature h2 {
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -276,7 +280,7 @@ header .mobile {
   }
 
   .feature {
-    margin: 0px .5rem;
+    margin: 0px 0.5rem;
     padding: 1rem;
   }
 
@@ -286,7 +290,7 @@ header .mobile {
   }
 
   .feature h3 {
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.4;
   }
 }
@@ -315,7 +319,7 @@ header .mobile {
 }
 
 #filters-section .content {
-  padding: 0 .625rem;
+  padding: 0 0.625rem;
   margin-bottom: 5rem;
 }
 
@@ -348,14 +352,14 @@ header .mobile {
   }
 
   #filters-section .content h2 {
-    padding-bottom: .625rem;
+    padding-bottom: 0.625rem;
     font-size: 1.125rem;
     line-height: 1.3;
     font-weight: normal;
   }
 
   #filters-section .content h3 {
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.4;
   }
 
@@ -403,7 +407,7 @@ header .mobile {
 @media only screen and (max-width: 600px) {
   #quotes-section .content {
     flex-flow: column;
-    padding: 1.875rem .625rem;
+    padding: 1.875rem 0.625rem;
   }
 
   #quotes-section .quote {
@@ -428,7 +432,7 @@ footer {
 footer .content {
   color: white;
   display: flex;
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 footer .copyright {
@@ -437,6 +441,6 @@ footer .copyright {
 
 @media only screen and (max-width: 600px) {
   footer .content {
-    font-size: .625rem;
+    font-size: 0.625rem;
   }
 }
